[package]
name = "hivcluster_rs"
version = "0.1.0"
edition = "2021"
authors = ["Claude <claude@anthropic.com>"]
description = "A Rust implementation of HIVClustering network construction functionality"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
petgraph = "0.6"
thiserror = "1.0"
rayon = { version = "1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
regex = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
criterion = "0.4"
tempfile = "3.5"
wasm-bindgen-test = "0.3"